--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,5 +73,12 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.6.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.6.0'
 
+    // ExoPlayer
+    // ExoPlayer
+    implementation 'androidx.media3:media3-ui:1.1.0'
+    implementation 'androidx.media3:media3-exoplayer:1.1.0'
+    implementation "androidx.media3:media3-exoplayer-dash:1.1.0"
+    implementation 'androidx.media3:media3-session:1.1.0'
+
     implementation 'com.github.bumptech.glide:glide:4.11.0'
 }
