Room db setup and create entity and dao classes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
 
     implementation project(path: ':sharedcode')
 
@@ -74,11 +75,14 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.6.0'
 
     // ExoPlayer
-    // ExoPlayer
     implementation 'androidx.media3:media3-ui:1.1.0'
     implementation 'androidx.media3:media3-exoplayer:1.1.0'
     implementation "androidx.media3:media3-exoplayer-dash:1.1.0"
     implementation 'androidx.media3:media3-session:1.1.0'
+
+    // Room components
+    implementation "androidx.room:room-ktx:2.5.2"
+    kapt 'androidx.room:room-compiler:2.5.2'
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
 }
