--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TvPlayer">
 
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.qs.tv.tvplayer.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
+
         <activity
             android:name=".dashboard.DashboardActivity"
             android:exported="true">
