--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,18 +30,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TvPlayer">
 
-        <provider
-            android:name="androidx.core.content.FileProvider"
-            android:authorities="com.qs.tv.tvplayer.fileprovider"
-            android:exported="false"
-            android:grantUriPermissions="true">
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/provider_paths" />
-        </provider>
-
         <activity
-            android:name=".dashboard.DashboardActivity"
+            android:name=".splash.StartActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -50,6 +40,10 @@
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".dashboard.DashboardActivity"
+            android:exported="false" />
         <activity
             android:name=".player.exoplayer.ExoPlayerActivity"
             android:exported="false"
@@ -70,6 +64,17 @@
         <activity
             android:name=".BrowseErrorActivity"
             android:exported="false" />
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.qs.tv.tvplayer.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
+
     </application>
 
 </manifest>
